# Satellite-Trajectory-Simulator

./: CMakeLists.txt  README.md  conanfile.py  run_debug.bat  run_release.bat
assets/framework/: KMLoutput.h  binarycontext.hpp  color.hpp  configurator.hpp  converter.hpp  coordinateconverter.hpp  distancelatlong.hpp  factory.hpp  functor.hpp  guid.hpp  iobservable.hpp  iobserver.hpp  logger.hpp  matrix.hpp  path.hpp  pch.cpp  pch.hpp  point.hpp  range.hpp  rect.hpp  serializationcontext.hpp  singleton.hpp  size.hpp  stringmanager.hpp  text.hpp  unitconverter.hpp  units.hpp  variant.hpp  vector.hpp  x.hpp  xmlreader.hpp  xmlreader_light.hpp
assets/pugixml-1.2/: pugiconfig.hpp  pugixml.cpp
sts/: orbit.cpp  orbit.hpp  satellite.cpp  satellite.hpp
test/: Source.cpp
test/config/: constel_1.xml  constel_2.xml  constel_3.xml  constel_4.xml  constel_5.xml  constel_6.xml  test_0.xml  test_1.xml  test_2.xml  test_3.xml  test_4.xml  test_5.xml  test_6.xml
test/data/: TLE.3le
